5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3119/executions/1644_2704.log
== TEST (2019-04-04 19:34:12) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota * 0.110)
else(mensagem == "N"):
	print(nota)

-- ERROR:
File "XXXX", line 7
    else(mensagem == "N"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:26) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota * 0.110)
else:
	print(nota)

-- OUTPUT:
0.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:34:48) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota * 110)
else:
	print(nota)

-- OUTPUT:
550.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:35:10) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota * 110)
else:
	print(nota)

-- EXECUTION TIME:
0.251576
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
550.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
990.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:35:35) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota * 110)
if(mensagem == "N"):
	print(nota)

-- OUTPUT:
550.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:35:46) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota * 110)
if(mensagem == "N"):
	print(nota)

-- EXECUTION TIME:
0.194517
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
550.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
990.0
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:36:18) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota * 110)
if(mensagem == "N"):
	print(nota)

-- OUTPUT:
550.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:36:26) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota * 110)
if(mensagem == "N"):
	print(nota)

-- OUTPUT:
550.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:36:43) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota * 0.10)
if(mensagem == "N"):
	print(nota)

-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:37:34) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota * 0.110)
if(mensagem == "N"):
	print(nota)

-- OUTPUT:
0.55
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:38:17) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota * 10/100)
if(mensagem == "N"):
	print(nota)

-- OUTPUT:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:38:42) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota + 10/100)
if(mensagem == "N"):
	print(nota)

-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:38:57) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota + 10/100)
if(mensagem == "N"):
	print(nota)

-- OUTPUT:
5.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:40:11) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota + 10/nota)
if(mensagem == "N"):
	print(nota)

-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 19:40:31) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota + nota/10)
if(mensagem == "N"):
	print(nota)

-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 19:40:41) 
-- CODE:
#Notas dos alunos
nota = float(input("Nota do aluno: "))
mensagem = input("O aluno sera bonificado? ")

if(mensagem == "S"):
	print(nota + nota/10)
if(mensagem == "N"):
	print(nota)

-- EXECUTION TIME:
0.165727
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
